// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/modal/demo/alert.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      Customized buttons
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      Confirm
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      More than two buttons
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      Promise
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/modal/demo/basic.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <a
      aria-disabled="false"
      class="am-button"
      role="button"
    >
      <span>
        Auto Platform
      </span>
    </a>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <a
      aria-disabled="false"
      class="am-button"
      role="button"
    >
      <span>
         Android UI 
      </span>
    </a>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <a
      aria-disabled="false"
      class="am-button"
      role="button"
    >
      <span>
         iOS UI
      </span>
    </a>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/modal/demo/operation.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      Operation
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/modal/demo/prompt.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      Promise
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      defaultValue
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      secure-text
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      Custom buttons
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
  >
    <span>
      login-password
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;
